--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="app">
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="./javascript/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
