populated the main

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
-    <div id="app">
+    <body>
+        <div id="app">
 
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="./js/main.js"></script>
-</body>
+            <header>
+                <div class="container">
+                    <div class="row h-100 d-felx align-items-center p-3">
+                    <div class="col">
+                        <img src="./img/package-lock.png" alt="">
+                    </div>
+                    </div>
+                </div>
+            </header>
+
+            <main>
+                <div>
+                    <div class="container">
+                        <div class="row p-5 gy-4">
+                            <div class="col-12 col-sm-6 col-lg-4 mb-4" v-for="(item, index) in discs" :key="index">
+                                <div class="container d-flex flex-column justify-content-center" id="card">
+                                    <div class="row">
+                                        <div class="col">
+                                            <img :src="item.poster" :alt="`${item.title}-${item.author}`">
+                                            <h3 class="text-uppercase fs-4">{{item.title}}</h3>
+                                            <p class="small">{{item.author}}</p>
+                                            <p class="small">{{item.year}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+            <footer></footer>
+        </div>
+
+
+
+
+        
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+        <script src="./js/main.js"></script>
+    </body>
 </html>
